scripts/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kafka
spec:
  gateways:
    - istio-system/all-hosts
  hosts:
    - kafka.openg2p.sandbox.net
  http:
    - route:
        - destination:
            host: kafka-ui
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana
spec:
  gateways:
    - istio-system/all-hosts
  hosts:
    - kibana.openg2p.sandbox.net
  http:
    - route:
        - destination:
            host: elasticsearch-kibana
            port:
              number: 5601
